add some styles.  this is definitely not what I want it to look like yet.

--- a/web/main.css
+++ b/web/main.css
@@ -13,7 +13,20 @@ body {
   padding: 25px;
 }
 
+.picture-frame {
+  display: flex;
+  justify-content: center;
+}
+
 img {
   max-width: 100%;
   max-height: 50vh;
+}
+
+.body-text {
+  margin: 2em;
+}
+
+.body-text p {
+  margin: 2em auto;
 }
