--- a/web/main.css
+++ b/web/main.css
@@ -21,6 +21,7 @@ body {
 img {
   max-width: 100%;
   max-height: 50vh;
+  align-self: center;
 }
 
 .body-text {
@@ -29,4 +30,23 @@ img {
 
 .body-text p {
   margin: 2em auto;
+}
+
+@media (max-width: 1000px) {
+  .picture-frame {
+    flex-direction: column;
+  }
+}
+
+@media (min-width: 1000px) {
+  .picture-frame {
+    flex-direction: row;
+    margin: 2em;
+  }
+
+  .picture-frame .picture-adjacent {
+    /* TODO: align top with picture or center */
+    /* TODO: make text larger */
+    margin: 2em;
+  }
 }
