add horizontal margin to movable text

--- a/web/main.css
+++ b/web/main.css
@@ -36,6 +36,10 @@ img {
   .picture-frame {
     flex-direction: column;
   }
+
+  .picture-frame .picture-adjacent {
+    margin: 0 2em;
+  }
 }
 
 @media (min-width: 1000px) {
