add remaining links from linktree, make call-to-action more salient, un-italicize social media header, remove unused stiles

--- a/web/main.css
+++ b/web/main.css
@@ -70,14 +70,10 @@ img {
   }
 }
 
-.media {
-  font-style: italic;
-  text-align: left;
-  white-space: nowrap;
-}
-
-li {
-  display: inline;
+.call-to-action {
+  background-color: #DAD9D5;
+  padding: 0.2em 2em;
+  text-align: center;
 }
 
 .social-media a {
