--- a/web/main.css
+++ b/web/main.css
@@ -6,6 +6,21 @@ body {
   margin: 0;
 }
 
+h1 {
+  font-size: 2.5em;
+  margin: 0.3em 0;
+}
+
+h2 {
+  font-size: 2em;
+  margin: 0.3em 0;
+}
+
+h3 {
+  font-size: 1.5em;
+  margin: 0.5em 0;
+}
+
 .page-header {
   display: flex;
   flex-direction: column;
