--- a/web/main.css
+++ b/web/main.css
@@ -21,6 +21,15 @@ h3 {
   margin: 0.5em 0;
 }
 
+.visually-hidden {
+  position: absolute;
+  left:     -10000px;
+  top:      auto;
+  width:    1px;
+  height:   1px;
+  overflow: hidden;
+}
+
 .page-header {
   display: flex;
   flex-direction: column;
