--- a/web/main.css
+++ b/web/main.css
@@ -41,7 +41,11 @@ h3 {
 
 .picture-frame {
   display: flex;
-  justify-content: center;
+  align-items: center;
+}
+
+.picture-frame .picture-adjacent {
+  margin: 0 2em;
 }
 
 img {
@@ -59,6 +63,7 @@ img {
 .page-content {
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
 
 .button {
@@ -82,18 +87,6 @@ img {
   .picture-frame {
     flex-direction: column;
   }
-
-  .picture-frame-padded {
-    padding: 2em 0;
-  }
-
-  .picture-frame .picture-adjacent {
-    margin: 0 2em;
-  }
-
-  .picture-frame-right {
-    background-color: #DAD9D5;
-  }
 }
 
 @media (min-width: 1000px) {
@@ -107,10 +100,6 @@ img {
 
   .picture-frame-right {
     flex-direction: row-reverse;
-  }
-
-  .picture-frame .picture-adjacent {
-    margin: 2em;
   }
 }
 
@@ -147,6 +136,21 @@ img {
   color: #aaaaaa;
 }
 
-.lever-intro {
-  margin: 0 2em;
+.page-content .section {
+  max-width: 1000px;
+}
+
+.section-intro {
+  padding: 0 2em;
+}
+
+.section h3 {
+  color: #5A7931;
+}
+
+.section .picture-frame {
+  background-color: #DAD9D5;
+  margin: 2em;
+  padding: 2em;
+  box-shadow: .3em .3em .3em #7A7776;
 }
