--- a/web/main.css
+++ b/web/main.css
@@ -164,6 +164,10 @@ img {
     overflow: hidden;
   }
 
+  .page-header {
+    height: 68px;
+  }
+
   .page-header .header-inside {
     max-width: 1000px;
     height: 100%;
@@ -252,7 +256,6 @@ img {
 .page-header {
   position: fixed;
   top: 0px;
-  height: 68px;
   width: 100%;
   background-color: white;
   border-bottom-color: #0081C7;
