--- a/web/main.css
+++ b/web/main.css
@@ -175,6 +175,14 @@ img {
     display: block;
   }
 
+  .page-header .header-side {
+    height: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin: 0;
+  }
+
   .page-header .header-left {
     float: left;
   }
@@ -185,15 +193,14 @@ img {
 
   .page-header .header-content {
     height: 100%;
-    margin: 0 2em;
     display: flex;
     flex-direction: row;
     align-items: center;
   }
 
-  .menu ul {
-    display: flex;
-    flex-direction: row;
+  .menu {
+    height: 100%;
+    width: 100%;
   }
 
   .menu li {
@@ -261,6 +268,10 @@ img {
   box-shadow: 0 3px 5px rgb(0, 0, 0, 10%);
   display: block;
   padding: 16px 0;
+}
+
+.page-header .header-content {
+  padding: 0 2em;
 }
 
 .page-header img {
