darken menu item colors to improve contrast ratio

--- a/web/main.css
+++ b/web/main.css
@@ -130,7 +130,7 @@ img {
     right: 0;
     padding: 30px;
     font-size: 40px;
-    color: #7A7776;
+    color: #544741;
   }
 
   .header-left {
@@ -290,7 +290,7 @@ img {
   text-decoration: none;
   font-weight: bold;
   font-size: 1.3em;
-  color: #7A7776;
+  color: #544741;
 }
 
 .menu li a:hover {
