adjust header numbering to achieve sequentially-descending header elements, for accessibility

--- a/web/main.css
+++ b/web/main.css
@@ -11,17 +11,17 @@ h1 {
   margin: 0;
 }
 
-h2 {
-  font-size: 2em;
+h1 .subtitle {
+  font-size: 0.8em;
   margin: 0.3em 0 0 0;
 }
 
-h3 {
+h2 {
   font-size: 1.5em;
   margin: 0.5em 0;
 }
 
-h4 {
+h3 {
 	display: flex;
 	font-weight: 700;
 	color: #5A7931;
