--- a/web/main.css
+++ b/web/main.css
@@ -59,7 +59,6 @@ h3 {
 }
 
 img {
-  max-width: 100%;
   max-height: 50vh;
   align-self: center;
 }
@@ -99,6 +98,10 @@ img {
 
   .picture-frame {
     flex-direction: column;
+  }
+
+  img {
+    max-width: 100%;
   }
 
   /* header with menu */
@@ -157,6 +160,10 @@ img {
 
   .picture-frame {
     margin: 2em;
+  }
+
+  img {
+    max-width: 600px;
   }
 
   .picture-frame-left {
