--- a/web/oct-earth-day-splash-page.css
+++ b/web/oct-earth-day-splash-page.css
@@ -12,7 +12,7 @@ body {
 }
 
 .title-block {
-  margin: 2em 0;
+  margin: .2em 0;
 }
 
 .earth-day-logo {
@@ -54,7 +54,7 @@ h2 {
 
 .tagline {
   text-align: center;
-  font-size: 28px;
+  font-size: .21em;
   font-style: italic;
 }
 
@@ -88,7 +88,7 @@ img {
     max-width: 95%;
   }
 
-  .earth-day-logo {
+  .title-block {
     font-size: 14vw;
   }
 }
@@ -98,7 +98,7 @@ img {
     margin-top: 50px;
   }
 
-  .earth-day-logo {
+  .title-block {
     font-size: 140px;
   }
 
