--- a/web/oct-earth-day-splash-page.css
+++ b/web/oct-earth-day-splash-page.css
@@ -59,16 +59,28 @@ h2 {
 }
 
 .bottom-tagline {
-  margin: 1em 0;
+  margin-top: 1em;
 }
 
 .details {
   text-align: center;
 }
 
+@media (max-width: 400px) {
+  .details .when {
+    font-size: 1.5em;
+  }
+}
+
+@media (min-width: 400px) and (max-width: 1000px) {
+  .details .when {
+    font-size: 5vw;
+  }
+}
+
 .details h2 {
-  font-style: bold;
-  font-size: 26px;
+  font-weight: bold;
+  font-size: 1.5em;
 }
 
 .details .detail {
@@ -104,5 +116,9 @@ img {
 
   .content {
     max-width: 900px;
+  }
+
+  .details .when {
+    font-size: 50px;
   }
 }
