add logos section to Oct Earth Day splash page

--- a/web/oct-earth-day-splash-page.css
+++ b/web/oct-earth-day-splash-page.css
@@ -92,6 +92,20 @@ img {
   max-width: 100%;
 }
 
+.details .organizations {
+  font-size: 1.2em;
+  font-style: italic;
+}
+
+.logos a {
+  text-decoration: none;
+}
+
+.logos img {
+  max-height: 150px;
+  margin: 20px;
+}
+
 @media (max-width: 1000px) {
   body {
     margin: 20px;
