--- a/web/oct-earth-day-splash-page.css
+++ b/web/oct-earth-day-splash-page.css
@@ -106,6 +106,11 @@ img {
   margin: 20px;
 }
 
+.contact {
+  margin-bottom: 20px;
+  text-align: center;
+}
+
 @media (max-width: 1000px) {
   body {
     margin: 20px;
