add logo & link for Generation Atomic to Earth Day splash page

--- a/web/oct-earth-day-splash-page.css
+++ b/web/oct-earth-day-splash-page.css
@@ -132,12 +132,20 @@ img {
   max-width: 100%;
 }
 
+.logos {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+}
+
 .logos a {
   text-decoration: none;
 }
 
 .logos img {
   max-height: 150px;
+  max-width: 300px;
   margin: 20px;
 }
 
