Update to indicate that the Earth Day event is now over
- removed the link from the front page
- created a "past events" section on the events page and moved it there
- changed verb tenses on the splash page to past tense
- added a photo gallery to the splash page

--- a/web/oct-earth-day-splash-page.css
+++ b/web/oct-earth-day-splash-page.css
@@ -91,6 +91,11 @@ h2 {
   padding: 20px;
 }
 
+.details .gallery img {
+  max-height: 400px;
+  margin: 10px;
+}
+
 .details .where {
   display: flex;
   font-size: 1.1em;
