--- a/web/main.css
+++ b/web/main.css
@@ -29,7 +29,13 @@ h3 {
 	margin: 0;
 	justify-content:center;
 }
-
+h4{
+	display: flex;
+	font-size: 1em;
+	padding: 0;
+	margin: 0;
+	justify-content:center;
+}
 .visually-hidden {
   position: absolute;
   left:     -10000px;
@@ -342,6 +348,11 @@ padding: 0 2em 0.5em 0;
 clear: both;  
 }
 
+.MOC-type {
+justify-content: center;	
+padding: 0;
+}
+
 .MOC-list {
  display: flex;
  flex-direction: row;
@@ -367,7 +378,7 @@ justify-content: center;
 padding: 0 3em 0 10%;
 }
 
-.redist-maps {
+.dist-maps {
 	display: flex;
 	flex-direction: row;
 	flex-wrap: wrap;
@@ -376,17 +387,16 @@ padding: 0 3em 0 10%;
 	padding: 0 4em 1em;
 }
 
-#image-now {
+#image-map {
   display: flex; 
   max-width: auto;
-  max-height: 40vh;
-  margin-right: 1em;
+  max-height: 23vh;
 }
 
-#image-2022 {
-  display: flex;
-  max-width: auto;
-  max-height: 40vh; 
+.click-on-map {
+font-size: 0.4em;
+margin: 0 1em;
+padding:0
 }
 
 .page-main-events {
